# modern-python-devops-egineering

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/prompts/: create-mkdocs-docs.prompt.md
.github/workflows/: docs.yml
chapter-01/: README.md  build.sh  index.html
chapter-01/py-packaging-history/: README.md
chapter-01/py-packaging-history/01-py16/: Dockerfile.complete  README.md
chapter-01/py-packaging-history/02-py23/: Dockerfile  Dockerfile.complete
chapter-01/py-packaging-history/03-py24/: Dockerfile  setup.py
chapter-01/py-packaging-history/04-py27/: Dockerfile.complete
chapter-01/py-packaging-history/05-py35/: README.md  setup.py
chapter-01/py-packaging-history/06-py311/: README.md  pyproject.toml
chapter-01/py-packaging-history/py16/: Dockerfile  Dockerfile.complete  README.md  setup.py
chapter-01/py-packaging-history/py23/: Dockerfile  Dockerfile.complete  (+2 more)
chapter-01/py-packaging-history/py311/: Dockerfile  Dockerfile.complete  README.md  pyproject.toml
chapter-01/py-packaging-history/py311/my_package/: __init__.py  main.py
chapter-01/py-packaging-history/py311/tests/: test_main.py
chapter-01/section-01/: Dockerfile  Dockerfile.devEnv  README.md  index.html
chapter-01/section-02/: README.md  index.html
chapter-01/section-03/: Dockerfile  Dockerfile.devEnv  README.md  environment.yml  index.html  pyproject.toml
chapter-01/section-04/: Dockerfile  Dockerfile.devEnv  Pipfile  README.md  index.html  pyproject.toml
chapter-01/section-04/.devcontainer/: Dockerfile  devcontainer.json
chapter-01/section-04/src/fastapi_crud/: main.py
chapter-01/section-04/src/pixelpack/: cli.py
chapter-01/section-04/tests/: test_cli.py  test_main.py
chapter-01/section-05/: .dockerignore  Dockerfile  README.md  pyproject.toml
chapter-01/section-05/.devcontainer/: Dockerfile  devcontainer.json
chapter-01/section-05/tests/: test_app.py
chapter-02/: README.md  build.sh  index.html
chapter-02/01-py-sys-env/: Dockerfile  README.md
chapter-02/02-py-virt-env/: README.md
chapter-02/py-dev-environments/: .gitignore  README.md
chapter-02/section-01/: Dockerfile  README.md  index.html  pyproject.toml
chapter-02/section-02/: Dockerfile  README.md  index.html  setup.py
chapter-02/section-03/: Dockerfile  README.md  index.html  setup.py
chapter-02/section-04/: Dockerfile  README.md  index.html  setup.py
chapter-02/section-05/: Dockerfile  Dockerfile.devEnv  README.md  index.html  setup.cfg
chapter-02/section-05/src/historic_calculator/: main.py
chapter-02/section-06/: Dockerfile.devEnv  README.md  index.html  pyproject.toml
chapter-02/section-06/src/historic_calculator/: main.py
chapter-03/: index.html
chapter-03/section-01/: index.html
chapter-03/section-02/: index.html
chapter-03/section-03/: index.html
chapter-03/section-04/: index.html
chapter-03/section-05/: index.html
chapter-03/section-06/: index.html
chapter-04/: index.html
chapter-04/section-01/: index.html
chapter-04/section-02/: index.html
chapter-04/section-03/: index.html
chapter-04/section-04/: index.html
chapter-04/section-05/: index.html
chapter-05/: index.html
chapter-05/section-01/: index.html
chapter-05/section-02/: index.html
chapter-05/section-03/: index.html
chapter-05/section-04/: index.html
chapter-05/section-05/: index.html
docs/: index.md
docs/assets/: python-palette.css
docs/chapter-01/: index.md  section-01.md  section-02.md  section-03.md  section-04.md  section-05.md
docs/chapter-02/: index.md  section-01.md  section-02.md  section-03.md  section-04.md  section-05.md  section-06.md
docs/chapter-03/: index.md  section-01 copy.md  section-01.md  section-02.md  section-03.md  section-04.md  section-05.md
docs/chapter-04/: index.md  section-01.md  section-02.md  section-03.md  section-04.md  section-05.md
docs/chapter-05/: index.md  section-02.md
projects/: build.sh
projects/proj1_docslug/: .gitignore  Dockerfile.devEnv  README.md  pyproject.toml
projects/proj1_docslug/src/docslug/: __init__.py  core.py
projects/proj1_docslug/tests/: test_docslug.py
projects/proj1_journal_admin/: Dockerfile.devEnv  README.md  pyproject.toml
projects/proj2_journal_admin/: .dockerignore  Dockerfile.devEnv  Dockerfile.windows  README.md  pyproject.toml
projects/proj2_journal_admin/debian/: changelog  control  rules  simply-journal-admin.install  simply-journal-admin.postinst  simply-journal-admin.postrm  simply-journal-admin.prerm  simply-journal-admin.service
projects/proj2_journal_admin/debian/extra/: simply-journal-admin
projects/proj2_journal_admin/msi/scripts/: build-msi.ps1
projects/proj2_journal_admin/msi/service/: install-service.ps1  uninstall-service.ps1
projects/proj2_journal_admin/msi/wix/: Product.wxs
projects/proj2_journal_admin/src/simply_journal_admin/: __init__.py  cli.py  constants.py
projects/proj2_journal_admin/tests/: test_cli.py
projects/proj2_journal_admin/windows-installer/scripts/: build-msi.ps1  install-venv.ps1  uninstall-venv.ps1
projects/proj2_journal_admin/windows-installer/service/: README.md  simply_journal_admin_service.py
projects/proj2_journal_admin/windows-installer/wix/: Product.wxs
projects/proj2_tiny_webserver/: Dockerfile.devEnv  README.md  pyproject.toml
projects/proj3_image_processor/: Dockerfile.devEnv  README.md  environment.yml  pyproject.toml  ruff.toml
projects/proj3_image_processor/recipe/: meta.yaml
projects/proj3_tiny_webserver/: Dockerfile  Dockerfile.devEnv  LICENSE  README.md
projects/proj4_image_processor/: Dockerfile.devEnv  README.md  environment.yml
projects/proj4_pixelpack/: Dockerfile.devEnv  README.md  pyproject.toml
projects/proj4_pixelpack/.devcontainer/: devcontainer.json
projects/proj4_pixelpack/src/pixelpack/: __init__.py
projects/proj5_pixelpack/: README.md
projects/proj6_depsight/: README.md
projects/proj7_jnotebook/: README.md  uv_dependency_resolution.ipynb
projects/proj8_depsight/: README.md
search/: search_index.json
(+135 files in other folders)
