[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "fastapi-crud"
version = "1.0.0"
description = "FastAPI CRUD API showcase for Pipenv"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "pydantic==2.9.2",
    "uvicorn==0.32.1",
]

[project.scripts]
fastapi-crud = "fastapi_crud.main:main"

[dependency-groups]
dev = [
    "karva>=0.0.1a5",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88
