[project]
name = "pixelpack"
version = "1.0.0"
description = "Tiny Pillow-based image-processing CLI for demonstrating Python dev containers"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pillow>=10.4.0",
]

[project.scripts]
pixelpack = "pixelpack.cli:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "karva>=0.0.1a5",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88
