# Declarative project metadata + tool configuration.
#
# setuptools 30.3.0 (Dec 2016) introduced the [metadata] and [options]
# sections, allowing nearly everything that used to live in setup.py
# (name, version, description, packages, install_requires, entry
# points, ...) to be specified declaratively here. setup.py is reduced
# to `setup()`.

[metadata]
name = historic_calculator
version = 5.0.0
description = A tiny vector calculator using NumPy and Click.

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy
    click

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    hist_calc = historic_calculator.main:cli

[bdist_wheel]
# Pure-Python-3 only -- do not produce a universal wheel.
universal = 0

[tool:pytest]
testpaths = tests
addopts = -ra
