[project]
name = "simply_journal_admin"
version = "1.0.0"
description = "Small admin CLI that reads systemd journal entries using python3-systemd"
requires-python = ">=3.11"
# Intentionally no runtime dependencies on PyPI.
# The only runtime dependency is `systemd.journal` from the APT package
# `python3-systemd`, which is installed through the system package manager.
dependencies = []

[project.scripts]
simply-journal-admin = "simply_journal_admin.cli:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "karva>=0.0.1a5",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py311"
line-length = 88
