[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "tiny-webserver"
version = "1.0.0"
description = "Example project for venv"
requires-python = ">=3.12"
dependencies = [
    "bottle==0.13.4",
]

[project.scripts]
tiny-webserver = "tiny_webserver.app:main"

[dependency-groups]
dev = [
    "karva>=0.0.1a5",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88
