[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "image-processor"
version = "1.0.0"
description = "OpenCV image-processing showcase for Conda"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1",
    "opencv-python-headless>=4.10",
]

[project.scripts]
image-processor = "image_processor.main:main"

[dependency-groups]
dev = [
    "karva>=0.0.1a5",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88
